# chatPlatform

./: .dockerignore  .env  Dockerfile  README.md  alembic.ini  app-deployment.yaml  app-service.yaml  db-deployment.yaml  db-service.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml  rabbitmq-deployment.yaml  requirements.in  requirements.txt
alembic/: env.py
alembic/versions/: 0c14d3f02c55_initial_migrati.py  0f91defdd64c_1.py  297388d24dcc_description_of_changes.py  4f0c5e1bb0dc_initial_m1igrati1111.py  6f9be07a00ab_initial_migration1.py  71abc08c6f4e_initial_m1igrati11111111.py  78082ac5617a_initial_migration111.py  7ea660b9a80b_initial_migrati1.py  8a3c707e8b05_initial_m1igrati111111.py  92677f35c2c6_initial_m1igrati1111111.py  9f733d7c5c75_initial_m1igrati111.py  a41877ea662e_initial_migration.py  aa23e023d213_initial_migration11.py  c812ebe7712a_initial_m1igrati11111.py  d5689789b05e_initial_m1.py  df420f94a188_initial_migrati111.py  e0ebdd1024d8_initial_m11.py  ee29416f1e76_initial_migrati11.py
api/: main.py
app/: README.md  main.py
app/api_v1/: api.py
chatplatform/: alembic.ini
chatplatform/alembic/: env.py
chatplatform/app/: main.py
chatplatform/certificates/: cert.pem  key.pem
chatplatform/core/: config.py  exceptions.py
chatplatform/db/: session.py
chatplatform/schemas/: chat.py  course.py  document.py  gpt_model.py  nlp.py
chatplatform/services/: association_service.py  course_service.py  document_indexer_service.py  document_service.py  gpt_chat_service.py  jwt_manager.py  nlp_service.py  user_service.py  websocket_service.py
chatplatform/storage/: default__vector_store.json  docstore.json  index_store.json
core/: config.py
db/: session.py
db/models/: admin.py  chat_session.py  course.py  document.py  external_user.py  (+5 more)
documents/: 9e4a6dc1-864e-4292-92d4-2c0c26877c5c.docx  b011ee43-f9d2-428e-896b-afed5a98c154.docx
gptchat/: gpt_chat_service.py
schemas/: auth.py  course.py  document.py  gpt_model.py  user.py
services/: association_service.py  chat_service.py  course_service.py  document_service.py  gpt_chat_service.py  jwt_manager.py  nlp_service.py  user_service.py  websocket_service.py
storage/: default__vector_store.json  docstore.json  index_store.json
websocket/: connection_manager.py
widgets/: chatWidget.html
(+41 files in other folders)
